cluster/istio-base/istio.gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway

metadata:
  name: app-gateway
  labels:
    application: istio

spec:
  selector:
    istio: ingressgateway

  servers: []
