cluster/istio-base/istio.virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: app-vservice
  labels:
    application: istio

spec:
  hosts: []

  gateways: []

  http: []
